@@ -264,3 +264,4 @@ function save_option_signature($option) {
     global $data_dir, $username;
     setSig($data_dir, $username, 'g', $option->new_value);
 }
+
